css/style.css
/* =============================================================================
   HTML5 display definitions
   ========================================================================== */

article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
audio:not([controls]) { display: none; }
[hidden] { display: none; }

/* =============================================================================
   Base
   ========================================================================== */

/*
 * 1. Correct text resizing oddly in IE6/7 when body font-size is set using em units
 * 2. Force vertical scrollbar in non-IE
 * 3. Prevent iOS text size adjust on device orientation change, without disabling user zoom: h5bp.com/g
 */

html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }

body { margin: 0; font-size: 13px; line-height: 1.231; }

body, button, input, select, textarea { font-family: sans-serif; color: #222; }

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection declarations have to be separate
 */

::-moz-selection { background: #000; color: #fff; text-shadow: none; }
::selection { background: #000; color: #fff; text-shadow: none; }

/* =============================================================================
   Links
   ========================================================================== */

a { color: #00e; }
a:visited { color: #551a8b; }
a:hover { color: #06e; }
a:focus { outline: thin dotted; }

/* Improve readability when focused and hovered in all browsers: h5bp.com/h */
a:hover, a:active { outline: 0; }

/* =============================================================================
   Typography
   ========================================================================== */

abbr[title] { border-bottom: 1px dotted; }

b, strong { font-weight: bold; }

blockquote { margin: 1em 40px; }

dfn { font-style: italic; }

hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }

ins { background: #ff9; color: #000; text-decoration: none; }

mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }

/* Redeclare monospace font family: h5bp.com/j */
pre, code, kbd, samp { font-family: monospace, serif; _font-family: 'courier new', monospace; font-size: 1em; }

/* Improve readability of pre-formatted text in all browsers */
pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }

q { quotes: none; }
q:before, q:after { content: ""; content: none; }

small { font-size: 85%; }

/* Position subscript and superscript content without affecting line-height: h5bp.com/k */
sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
sup { top: -0.5em; }
sub { bottom: -0.25em; }

/* =============================================================================
   Lists
   ========================================================================== */

ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
dd { margin: 0 0 0 40px; }
nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }


/* =============================================================================
   Embedded content
   ========================================================================== */

/*
 * 1. Improve image quality when scaled in IE7: h5bp.com/d
 * 2. Remove the gap between images and borders on image containers: h5bp.com/e
 */

img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }

/*
 * Correct overflow not hidden in IE9
 */

svg:not(:root) { overflow: hidden; }

/* ==|== primary styles =====================================================
   Author: Cameron Higby-Naquin
   ========================================================================== */

body {
    background-color:#000;
}

#main {
    width: 1095px;
    margin: 0 auto;
    padding-left: 10px;
    padding-top: 10px;
    background-image: url(/img/bg-transparent.png);
    background-repeat: no-repeat;
}

nav {
    float: left;
    width: 340px;
    margin-right:90px;
    margin-top: 2em;
}

article {
    margin-top: 2em;
    float: left;
    width: 640px;
}

header a {
    margin-left: 19%;
}

.circle-logo {
    margin:0 auto;
}

.art {
    -webkit-border-image: url(/img/frame.png) 55 45 45 45 round;
    -moz-border-image: url(/img/frame.png) 55 45 45 45 round;
    border-image: url(/img/frame.png) 55 45 45 45 round;
    border-width: 50px;
    width: 500px;
}

.download {
    text-align: right;
    padding-right: 10%;
}

.info {
    font-family: serif;
    font-size: 150%;
}

.inscriptions {
    margin-top: 20px;
}

.player {
    cursor: default;
    background: url(/img/player-550p.png) no-repeat;
    height: 116px;
    margin-left: 2em;
}

#playtoggle {
    position: relative;
    display: block;
    top: 30px;
    left: 35px;
    width: 50px;
    height: 50px;
    background: url(/img/player-dingbats-40.png) no-repeat -64px 0;
    cursor: pointer;
}

#playtoggle.playing {
	background-position: 0 0;
}

#playtoggle:active {
	top: 10px;
}

#timeleft {
	line-height: 48px;
	position: relative;
        left: 490px;
	width: 50px;
	text-align: center;
	font-size: 11px;
	font-weight: bold;
	color: #333;
}

#wrapper #timeleft {
	right: 40px;
}

#gutter {
	position: relative;
        display: block;
	top: -1px;
        width: 376px;
	left: 111px;
	right: 50px;
	height: 6px;
	padding: 2px;
}

#wrapper #gutter {
	right: 90px;
}

#loading {
	background: #fff;
	background: #939eaa;
	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#eaeef1), to(#c7cfd8));
	background: -moz-linear-gradient(top, #eaeef1, #c7cfd8);
	background: linear-gradient(top, #eaeef1, #c7cfd8);
	-webkit-box-shadow: 0 1px 0 #fff inset, 0 1px 0 #141e28;
	-moz-box-shadow: 0 1px 0 #fff inset, 0 1px 0 #141e28;
	-o-box-shadow: 0 1px 0 #fff inset, 0 1px 0 #141e28;
	box-shadow: 0 1px 0 #fff inset, 0 1px 0 #141e28;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	-o-border-radius: 3px;
	border-radius: 3px;
	/* display: block; */
	float: left;
	min-width: 6px;
	height: 6px;
}

#handle {
	position: absolute;
	top: -18px;
	left: -11px;
	width: 50px;
	height: 50px;
	margin-left: -10px;
	background: url(/img/player-dingbats-40.png) no-repeat -133px -5px;
	cursor: pointer;
}

